chore: Criar requisições para cadastrar cargos e funcionarios

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/global.css">
-  <script src="https://kit.fontawesome.com/6d228377c9.js" crossorigin="anonymous"></script>
   <title>Menu</title>
 </head>
 
 <body>
   <header id="topbar">
     <div class="wrapper">
-      <div class="logo">
-        <h1>DRAGSTERS</h1>
-      </div>
+      <a href="/Dragsters/">
+        <div class="logo">
+          <h1>DRAGSTERS</h1>
+        </div>
+      </a>
 
       <div class="user-logged">
 
@@ -32,25 +34,25 @@
   <div id="page-menu">
     <div class="menu-square">
       <div class="container-12">
-        <a class="col-4" href="">
+        <a class="col-4" href="/Dragsters/ProdutoController">
           <div class="menu-item">
             <i class="fas fa-box-open"></i>
             <span>PRODUTO</span>
           </div>
         </a>
-        <a class="col-4" href="">
+        <a class="col-4" href="/Dragsters/ClienteController">
           <div class="menu-item">
             <i class="fas fa-users"></i>
             <span>CLIENTE</span>
           </div>
         </a>
-        <a class="col-4" href="">
+        <a class="col-4" href="/Dragsters/FuncionarioController">
           <div class="menu-item">
             <i class="fas fa-users-cog"></i>
             <span>FUNCIONARIO</span>
           </div>
         </a>
-        <a class="col-4" href="">
+        <a class="col-4" href="/Dragsters/VendaController">
           <div class="menu-item">
             <i class="fas fa-cash-register"></i>
             <span>CAIXA</span>
@@ -65,5 +67,7 @@
       </div>
     </div>
   </div>
+  <script src="https://kit.fontawesome.com/6d228377c9.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
